package org.example.adapter;

public class FahrenheitTemperature {
    public double temperature() {
        return 100;
    }
}
