package org.example.adapter;

public interface Temperature {

    public double temperature();

    public void setUnit(String unit);
}
